# GreyForm_UIs

./: .gitignore  GreyformUI(Mok Zhi Zhuan).drawio  GreyformUI.drawio  README.md
Greyform/: ref paint.txt  ref.txt  reffor rescale.txt
Greyform-linux-ros1/: confirminit.py  settings.json
Greyform-linux-ros1/Greyform-linux/Python_Application/src/talker_listener/: CMakeLists.txt
Greyform-linux-ros1/Greyform-linux/Python_Application/src/talker_listener/talker_listener/: listener_node.py  talker_node.py
Greyform-linux-ros1/PythonApplication/: createmesh.py  leftbuttoninteractor.py  processlistenerrunner.py  savesetting.py  wall_identifiers.py
Greyform-linux-ros1/Python_Application/: .~lock.exporteddatassss(with TMP)(draft)(tetra).xlsx#  .~lock.output.xlsx#  appinit.py  confirminit.py  error_log.txt  exporteddatas.xlsx  exporteddatass.xlsx  exporteddatassss(with TMP)(draft)(tetra).xlsx  exporteddatassss(with TMP)(draft).xlsx  installpip3.sh  jsonimport.py  mainthheme.py  mainwindow.py  mainwindowbuttoninteraction.py  mainwindowlayout.py  menu_close.py  menu_sendmodel.py  output.stl  output.xlsx  requirement.txt  settings.json  temp_black_format.py
Greyform-linux-ros1/Python_Application/src/my_robot_wallinterfaces/: CMakeLists.txt
Greyform-linux-ros1/Python_Application/src/my_robot_wallinterfaces/msg/: SelectionWall.msg
Greyform-linux-ros1/UI_Design/: Profile.ui  login_ui.py  usermanual.ui
Greyform-linux/Python_Application/: .colconignore  .~lock.exporteddatas.xlsx#  Pin Allocation BOM for PBU_T1a.xlsx  appinit.py  confirminit.py  error_log.txt  exporteddata.xlsx  exporteddatas.xlsx  exporteddatass.xlsx  exporteddatassss(with TMP)(draft)(tetra).xlsx  exporteddatassss(with TMP)(draft1)(tetra).xlsx  installpip3.sh  jsonimport.py  launcher.py  mainapplication.py  mainwindow.py  mainwindowbuttoninteraction.py  mainwindowlayout.py  menu_close.py  (+6 more)
Greyform-linux/Python_Application/my_robot_wallinterfaces/: CMakeLists.txt
Greyform-linux/Python_Application/my_robot_wallinterfaces/msg/: CombinedMessage.msg  FileExtractionMessage.msg
(+555 files in other folders)
